Updates the documentation for v1.4.4

--- a/docs/components/modals.html
+++ b/docs/components/modals.html
@@ -231,8 +231,9 @@
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
 </code></pre>
             <h4 class="s-subtitle" id="modals-sizes">Modal sizes<a class="anchor" href="#modals-sizes" aria-hidden="true">#</a></h4>
+            <p>Use the <code>modal-sm</code>, <code>modal-lg</code>, <code>modal-xl</code> or <code>modal-full</code> classes for different sizes.</p>
             <div class="docs-demo columns">
-              <div class="column col-6 col-xs-12"><a class="btn btn-primary" href="#example-modal-2">Open small size Modal</a>
+              <div class="column col-3 col-xs-12"><a class="btn btn-primary" href="#example-modal-2">Open small modal</a>
                 <div class="modal modal-sm" id="example-modal-2"><a class="modal-overlay" href="#modals-sizes" aria-label="Close"></a>
                   <div class="modal-container" role="document">
                     <div class="modal-header"><a class="btn btn-clear float-right" href="#modals-sizes" aria-label="Close"></a>
@@ -263,12 +264,7 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <p>Use the <code>modal-sm</code> class for a smaller modal dialog.
-              The container max width is <code>320px</code>.
-            </p>
-            <div class="docs-demo columns">
-              <div class="column"><a class="btn btn-primary" href="#example-modal-3">Open large size Modal</a>
+              <div class="column col-3 col-xs-12"><a class="btn btn-primary" href="#example-modal-3">Open large modal</a>
                 <div class="modal modal-lg" id="example-modal-3"><a class="modal-overlay" href="#modals-sizes" aria-label="Close"></a>
                   <div class="modal-container" role="document">
                     <div class="modal-header"><a class="btn btn-clear float-right" href="#modals-sizes" aria-label="Close"></a>
@@ -294,10 +290,59 @@
                   </div>
                 </div>
               </div>
+              <div class="column col-3 col-xs-12"><a class="btn btn-primary" href="#example-modal-5">Open extra large modal</a>
+                <div class="modal modal-xl" id="example-modal-5"><a class="modal-overlay" href="#modals-sizes" aria-label="Close"></a>
+                  <div class="modal-container" role="document">
+                    <div class="modal-header"><a class="btn btn-clear float-right" href="#modals-sizes" aria-label="Close"></a>
+                      <div class="modal-title h5">Modal title</div>
+                    </div>
+                    <div class="modal-body">
+                      <div class="content">
+                        <p>This is the content inside the modal.</p>
+                        <h4>Lorem ipsum</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus leo, dictum in vehicula sit amet, feugiat tempus tellus. Duis quis sodales risus. Etiam euismod ornare consequat.</p>
+                        <p>Climb leg rub face on everything give attitude nap all day for under the bed. Chase mice attack feet but rub face on everything hopped up on goofballs.</p>
+                        <h4>Cupcake ipsum</h4>
+                        <p>Jelly-o sesame snaps halvah croissant oat cake cookie. Cheesecake bear claw topping. Chupa chups apple pie carrot cake chocolate cake caramels.</p>
+                        <p>De braaaiiiins apocalypsi gorger omero prefrontal cortex undead survivor fornix dictum mauris. Hi brains mindless mortuis limbic cortex soulless creaturas optic nerve.</p>
+                        <h4>Candy ipsum</h4>
+                        <p>Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar.</p>
+                        <p>Caerphilly swiss fromage frais. Brie cheese and wine fromage frais chalk and cheese danish fontina smelly cheese who moved my cheese cow.</p>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button class="btn btn-primary">Share</button><a class="link link-primary" href="#modals-sizes">Close</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column col-3 col-xs-12"><a class="btn btn-primary" href="#example-modal-6">Open full modal</a>
+                <div class="modal modal-full" id="example-modal-6"><a class="modal-overlay" href="#modals-sizes" aria-label="Close"></a>
+                  <div class="modal-container" role="document">
+                    <div class="modal-header"><a class="btn btn-clear float-right" href="#modals-sizes" aria-label="Close"></a>
+                      <div class="modal-title h5">Modal title</div>
+                    </div>
+                    <div class="modal-body">
+                      <div class="content">
+                        <p>This is the content inside the modal.</p>
+                        <h4>Lorem ipsum</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus leo, dictum in vehicula sit amet, feugiat tempus tellus. Duis quis sodales risus. Etiam euismod ornare consequat.</p>
+                        <p>Climb leg rub face on everything give attitude nap all day for under the bed. Chase mice attack feet but rub face on everything hopped up on goofballs.</p>
+                        <h4>Cupcake ipsum</h4>
+                        <p>Jelly-o sesame snaps halvah croissant oat cake cookie. Cheesecake bear claw topping. Chupa chups apple pie carrot cake chocolate cake caramels.</p>
+                        <p>De braaaiiiins apocalypsi gorger omero prefrontal cortex undead survivor fornix dictum mauris. Hi brains mindless mortuis limbic cortex soulless creaturas optic nerve.</p>
+                        <h4>Candy ipsum</h4>
+                        <p>Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar.</p>
+                        <p>Caerphilly swiss fromage frais. Brie cheese and wine fromage frais chalk and cheese danish fontina smelly cheese who moved my cheese cow.</p>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button class="btn btn-primary">Share</button><a class="link link-primary" href="#modals-sizes">Close</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <p>Use the <code>modal-lg</code> class for a full size modal.
-              The container max width is <code>960px</code>.
-            </p>
             <pre class="code" data-lang="HTML"><code><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"modal modal-sm"</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"#close"</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"modal-overlay"</span> <span class="hljs-attr">aria-label</span>=<span class="hljs-string">"Close"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">a</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"modal-container"</span>&gt;</span>
