Updated all old static.ridestyler.net refs

--- a/docs/src/getting-started/installation.pug
+++ b/docs/src/getting-started/installation.pug
@@ -45,7 +45,7 @@ block docs-content
     pre.code(data-lang='HTML')
       code
         :highlight(lang="html")
-          <link rel="stylesheet" href="https://static.ridestyler.net/rs-ui/latest/rsui.min.css">
+          <link rel="stylesheet" href="https://static.ridestyler.com/rs-ui/latest/rsui.min.css">
     p
       | You can also load the icons build from the CDN:
 
@@ -53,7 +53,7 @@ block docs-content
     pre.code(data-lang='HTML')
       code
         :highlight(lang="html")
-          <link rel="stylesheet" href="https://static.ridestyler.net/rs-ui/latest/rsui-icons.min.css">
+          <link rel="stylesheet" href="https://static.ridestyler.com/rs-ui/latest/rsui-icons.min.css">
 
     p
       | Or you can load our custom components from the CDN:
@@ -62,7 +62,7 @@ block docs-content
     pre.code(data-lang='HTML')
       code
         :highlight(lang="html")
-          <script type="text/javascript" src="https://static.ridestyler.net/rs-ui/latest/components/rsui.umd.js">
+          <script type="text/javascript" src="https://static.ridestyler.com/rs-ui/latest/components/rsui.umd.js">
 
     +docs-subheading('install-npm', 'Install with NPM')
 
