--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,6 @@
 // Core variables
 $version: "{PACKAGE_VERSION}";
-$font-base: "https://static.ridestyler.net/fonts/";
+$font-base: "https://static.ridestyler.com/fonts/";
 
 // Core features
 $rtl: false !default;
@@ -14,12 +14,12 @@ $ridestyler-color-red: #E72320;
 $ridestyler-color-blue: #21B8F7;
 
 // RideStyler Logos
-$ridestyler-logo-text: 'https://static.ridestyler.net/temp/logos/ridestyler-logo-TEXT.svg' !default;
-$ridestyler-logo-icon: 'https://static.ridestyler.net/temp/logos/ridestyler-logo-ICON.svg' !default;
-$ridestyler-logo-full: 'https://static.ridestyler.net/temp/logos/ridestyler-logo-FULL.svg' !default;
-$ridestyler-logo-full-light: 'https://static.ridestyler.net/temp/logos/ridestyler-logo-FULL-light.svg' !default;
-$ridestyler-logo-tagonly-black: 'https://static.ridestyler.net/images/ridestyler_logo_tagonly_nobg_black.svg' !default;
-$ridestyler-logo-tagonly-white: 'https://static.ridestyler.net/images/ridestyler_logo_tagonly_nobg_white.svg' !default;
+$ridestyler-logo-text: 'https://static.ridestyler.com/temp/logos/ridestyler-logo-TEXT.svg' !default;
+$ridestyler-logo-icon: 'https://static.ridestyler.com/temp/logos/ridestyler-logo-ICON.svg' !default;
+$ridestyler-logo-full: 'https://static.ridestyler.com/temp/logos/ridestyler-logo-FULL.svg' !default;
+$ridestyler-logo-full-light: 'https://static.ridestyler.com/temp/logos/ridestyler-logo-FULL-light.svg' !default;
+$ridestyler-logo-tagonly-black: 'https://static.ridestyler.com/images/ridestyler_logo_tagonly_nobg_black.svg' !default;
+$ridestyler-logo-tagonly-white: 'https://static.ridestyler.com/images/ridestyler_logo_tagonly_nobg_white.svg' !default;
 
 // Core colors
 $primary-color: $ridestyler-color-blue !default;
