Accordion style update
Accordion vue component added

--- a/docs/components/accordions.html
+++ b/docs/components/accordions.html
@@ -180,7 +180,7 @@
               <div class="column col-6 col-md-12">
                 <div class="accordion">
                   <input id="accordion-1" type="radio" name="accordion-radio" hidden="" checked="">
-                  <label class="accordion-header c-hand" for="accordion-1"><i class="icon icon-arrow-right mr-1"></i>Elements</label>
+                  <label class="accordion-header c-hand" for="accordion-1">Elements<i class="icon icon-accordion ml-2"></i></label>
                   <div class="accordion-body">
                     <ul class="menu menu-nav">
                       <li class="menu-item"><a href="#accordions">Element 1</a></li>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="accordion">
                   <input id="accordion-2" type="radio" name="accordion-radio" hidden="">
-                  <label class="accordion-header c-hand" for="accordion-2"><i class="icon icon-arrow-right mr-1"></i>Layout</label>
+                  <label class="accordion-header c-hand" for="accordion-2">Layout<i class="icon icon-accordion ml-2"></i></label>
                   <div class="accordion-body">
                     <ul class="menu menu-nav">
                       <li class="menu-item"><a href="#accordions">Layout 1</a></li>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="accordion">
                   <input id="accordion-3" type="radio" name="accordion-radio" hidden="">
-                  <label class="accordion-header c-hand" for="accordion-3"><i class="icon icon-arrow-right mr-1"></i>Components</label>
+                  <label class="accordion-header c-hand" for="accordion-3">Components<i class="icon icon-accordion ml-2"></i></label>
                   <div class="accordion-body">
                     <ul class="menu menu-nav">
                       <li class="menu-item"><a href="#accordions">Component 1</a></li>
@@ -246,8 +246,8 @@
 <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"accordion"</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"checkbox"</span> <span class="hljs-attr">id</span>=<span class="hljs-string">"accordion-1"</span> <span class="hljs-attr">name</span>=<span class="hljs-string">"accordion-checkbox"</span> <span class="hljs-attr">hidden</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">label</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"accordion-header"</span> <span class="hljs-attr">for</span>=<span class="hljs-string">"accordion-1"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-arrow-right mr-1"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span>
     Title
+    <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-accordion ml-2"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">label</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"accordion-body"</span>&gt;</span>
     <span class="hljs-comment">&lt;!-- Accordions content --&gt;</span>
@@ -272,8 +272,8 @@
             <pre class="code" data-lang="HTML"><code><span class="hljs-comment">&lt;!-- details and summary Accordions example --&gt;</span>
 <span class="hljs-tag">&lt;<span class="hljs-name">details</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"accordion"</span> <span class="hljs-attr">open</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">summary</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"accordion-header"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-arrow-right mr-1"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span>
     Title
+    <span class="hljs-tag">&lt;<span class="hljs-name">i</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"icon icon-accordion ml-2"</span>&gt;</span><span class="hljs-tag">&lt;/<span class="hljs-name">i</span>&gt;</span>
   <span class="hljs-tag">&lt;/<span class="hljs-name">summary</span>&gt;</span>
   <span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"accordion-body"</span>&gt;</span>
     <span class="hljs-comment">&lt;!-- Accordions content --&gt;</span>
