--- a/docs/src/components/accordions.pug
+++ b/docs/src/components/accordions.pug
@@ -16,8 +16,8 @@ block docs-content
         .accordion
           input#accordion-1(type="radio" name="accordion-radio" hidden="" checked="")
           label.accordion-header.c-hand(for="accordion-1")
-            i.icon.icon-arrow-right.mr-1
             | Elements
+            i.icon.icon-accordion.ml-2
           .accordion-body
             ul.menu.menu-nav
               li.menu-item
@@ -27,8 +27,8 @@ block docs-content
         .accordion
           input#accordion-2(type="radio" name="accordion-radio" hidden="")
           label.accordion-header.c-hand(for="accordion-2")
-            i.icon.icon-arrow-right.mr-1
             | Layout
+            i.icon.icon-accordion.ml-2
           .accordion-body
             ul.menu.menu-nav
               li.menu-item
@@ -38,8 +38,8 @@ block docs-content
         .accordion
           input#accordion-3(type="radio" name="accordion-radio" hidden="")
           label.accordion-header.c-hand(for="accordion-3")
-            i.icon.icon-arrow-right.mr-1
             | Components
+            i.icon.icon-accordion.ml-2
           .accordion-body
             ul.menu.menu-nav
               li.menu-item
@@ -85,8 +85,8 @@ block docs-content
           <div class="accordion">
             <input type="checkbox" id="accordion-1" name="accordion-checkbox" hidden>
             <label class="accordion-header" for="accordion-1">
-              <i class="icon icon-arrow-right mr-1"></i>
               Title
+              <i class="icon icon-accordion ml-2"></i>
             </label>
             <div class="accordion-body">
               <!-- Accordions content -->
@@ -115,8 +115,8 @@ block docs-content
           <!-- details and summary Accordions example -->
           <details class="accordion" open>
             <summary class="accordion-header">
-              <i class="icon icon-arrow-right mr-1"></i>
               Title
+              <i class="icon icon-accordion ml-2"></i>
             </summary>
             <div class="accordion-body">
               <!-- Accordions content -->
