--- a/docs/src/components/accordions.pug
+++ b/docs/src/components/accordions.pug
@@ -15,7 +15,7 @@ block docs-content
       .column.col-6.col-md-12
         .accordion
           input#accordion-1(type="radio" name="accordion-radio" hidden="" checked="")
-          label.accordion-header.c-hand(for="accordion-1")
+          label.accordion-header.justify-space-between.c-hand(for="accordion-1")
             | Elements
             i.icon.icon-accordion.ml-2
           .accordion-body
@@ -26,7 +26,7 @@ block docs-content
                 a(href="#accordions") Element 2
         .accordion
           input#accordion-2(type="radio" name="accordion-radio" hidden="")
-          label.accordion-header.c-hand(for="accordion-2")
+          label.accordion-header.justify-space-between.c-hand(for="accordion-2")
             | Layout
             i.icon.icon-accordion.ml-2
           .accordion-body
@@ -37,7 +37,7 @@ block docs-content
                 a(href="#accordions") Layout 2
         .accordion
           input#accordion-3(type="radio" name="accordion-radio" hidden="")
-          label.accordion-header.c-hand(for="accordion-3")
+          label.accordion-header.justify-space-between.c-hand(for="accordion-3")
             | Components
             i.icon.icon-accordion.ml-2
           .accordion-body
@@ -49,7 +49,7 @@ block docs-content
       .column.col-6.col-md-12
         .accordion
           input#accordion-4(type="checkbox" name="accordion-checkbox" hidden="" checked="")
-          label.accordion-header.c-hand(for="accordion-4")
+          label.accordion-header.justify-space-between.c-hand(for="accordion-4")
             | Elements
           .accordion-body
             ul.menu.menu-nav
@@ -122,5 +122,73 @@ block docs-content
               <!-- Accordions content -->
             </div>
           </details>
+
+    +docs-subheading('accordion-component', 'Component')
+
+    p
+      | You can use the accordion component to quickly add a set of customizable accordions. Add a 
+      | accordion element inside of the DOM and add any available settings as a prop. Available slots 
+      | include: 
+      code header
+      |  and 
+      code body
+      |.
+
+    pre.code(data-lang='HTML')
+      code
+        :highlight(lang="html")
+          <!-- Accordion component example -->
+          <Accordion name="accordion-radio" 
+            :exclusive="true" 
+            :scroll-into-view="true">
+            <template v-slot:header>
+              <h4>Title</h4>
+              <i>Lorem ipsum dolor sit amet</i>
+            </template>
+            <template v-slot:body>
+              <!-- Accordions content -->
+            </template>
+          </Accordion>
+      
+    h4 props
+
+    ul
+      li
+        strong name
+        |  - default: unique name string. Optional input name, useful for mutually exclusive Accordions
+      li
+        strong id
+        |  - default: unique id string. Optional input id
+      li
+        strong exclusive
+        |  - default: false. Set to true for mutually exclusive Accordions (with same input names)
+      li
+        strong scroll-into-view
+        |  - default: false. Set to true for auto scroll to top of current accordion when expanded
+        
+    h4 events
+
+    ul
+      li
+        strong expanded
+        |  - Event emitted when accordion finishes expanding.
+      li
+        strong collapsed
+        |  - Event emitted when accordion finishes collapsing.
+        
+    h4 slots
+
+    ul
+      li
+        strong header
+        |  - The slot for adding content to the accordion header.
+      li
+        strong body
+        |  - The slot for adding content to the accordion body.
+
+    p
+      | Checkout out the 
+      a(href='../getting-started/javascript.html#rs-ui-components', target='_blank') Javascript 
+      | page for more information on how to setup a custom component.
 
   include ../_layout/_footer.pug
